# proof-of-convo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
backend/: __init__.py  config.py  main.py
docs/: adr-001-tab-capture-architecture.md  adr-002-audio-telemetry-capture.md  adr-003-phase-2-stt-vad-benchmark-plan.md  adr-004-offline-stt-benchmark-plan.md  adr-005-phase-2b-live-stt-worker.md  adr-006-phase-2c-transcript-publishing.md  adr-007-phase-3-tts-voice-injection.md  adr-008-phase-4-erica-agent-state-machine.md  phase-1-testing.md  phase-3-completion-audit-2026-05-08.md  phase-3-testing.md  requirements-analysis-remaining-functionality-2026-06-15.md
extension/: eslint.config.js  offscreen.html  package-lock.json  package.json  popup.html  sidepanel.html  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: __init__.py  analyze_telemetry.py  benchmark_diarization.py  benchmark_stt.py  benchmark_vad.py  capture_local_mic.py  capture_phase4_snapshot.py  check_audio_devices.py  evaluate_agent.py  phase4_live_bundle.py  phase4_live_report.py  phase4_live_runbook.py  send_test_audio.py  test_tts_playback.py  verify_phase3.py  verify_phase4.py  verify_phase4_live_backend.py  verify_phase4_live_ready.py
tests/: test_agent.py  test_audio_consumer.py  test_audio_frames.py  test_audio_manager.py  test_backend_app.py  test_capture_phase4_snapshot.py  test_diarization.py  test_diarization_benchmark.py  test_endpointing.py  test_evaluate_agent.py  test_live_stt.py  test_phase4_live_bundle.py  test_phase4_live_report.py  test_phase4_live_runbook.py  test_reasoner.py  test_stt.py  test_stt_benchmark.py  (+7 more)
(+67 files in other folders)
