[project]
name = "proof-of-convo"
version = "0.1.0"
description = "Live agentic meeting participant POC: local backend and Chrome Meet audio capture."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.0",
  "mlx>=0.26.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-whisper>=0.4.3; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "numpy>=2.0.0",
  "onnxruntime>=1.20.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "silero-vad[onnx-cpu]>=6.0.0",
  "sounddevice>=0.5.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=13.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[project.scripts]
backend = "backend.main:run"
analyze-telemetry = "scripts.analyze_telemetry:main"
send-test-audio = "scripts.send_test_audio:main"
check-audio-devices = "scripts.check_audio_devices:main"
benchmark-vad = "scripts.benchmark_vad:main"
benchmark-stt = "scripts.benchmark_stt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sounddevice"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
